<resources>
    <string name="app_name">Bazaar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="click_here">Click here</string>
    <string name="new_to_bazaar">New to Bazaar?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="we_will_send_you_an_email_with_instructions_on_how_to_reset_your_password">We will send you an email with instructions on how to reset your password.</string>
    <string name="email">Email</string>
    <string name="email_me">Email me</string>
</resources>