<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#161616"
    tools:context=".fragments.ForgotPasswordFragment">


    <LinearLayout
        android:layout_width="100.7dp"
        android:layout_height="24dp"
        android:background="@drawable/Bazaar_logo_coloured"
        android:layout_marginBottom="36dp"
        >

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#212121"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="40dp"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password2"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginBottom="24dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_will_send_you_an_email_with_instructions_on_how_to_reset_your_password"
                android:textColor="#B2EEEEEE"
                android:textSize="12sp"
                android:layout_marginBottom="14.95dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#00B5C0"
                android:textColorHint="#B2EEEEEE"
                android:layout_marginBottom="28.8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:textSize="14sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="26dp"
                android:backgroundTint="#00B5C0"
                android:text="@string/email_me"
                android:textColor="#212121"
                android:textSize="12sp"
                >

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>



    </androidx.cardview.widget.CardView>






</LinearLayout>